<resources>
    <string name="app_name">partEz</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="new_register_user">New to PartEz? Register here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_different">This password is different</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email</string>
    <string name="create_event">"Create Event</string>
    <string name="submit_event">"Submit</string>
    <string name="event_description">Description</string>
    <string name="event_city">City</string>
    <string name="event_location">Location</string>
    <string name="event_name">Name</string>
    <string name="add_email_edit">Add Invitee</string>
    <string name="add_poll_edit">Add Poll</string>
    <string name="add_item_edit">Add Item</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="event_date">Event Date</string>
</resources>
